Add profile lookup API
